--- a/Assignment 0/index.html
+++ b/Assignment 0/index.html
@@ -9,7 +9,7 @@
     <h1>Welcome to My Website</h1>
     <p>Check out the contents of my folder:</p>
     <ul>
-        <li><a href="https://prod.liveshare.vsengsaas.visualstudio.com/join?417848F54B8261297719E11E6A65449A3A76">Link to a text file</a></li>
+        <li><a href="https://github.com/B-Preeti/Preeti-Assignment-1">Click here to open</a></li>
     </ul>
 </body>
 </html>
